# socelle-global

./: .gitignore  AGENTS.md  README.md  SOCELLE_AI_FOR_BRANDS.html  SOCELLE_AI_FOR_PROS.html  SOCELLE_MASTER_BUILD_WO.md  ULTRA_DRIVE_PROMPT.md  package-lock.json  package.json  turbo.json  wrangler.toml
.claude/: CLAUDE.md  launch.json  settings.local.json
SOCELLE-MOBILE-main/: .firebaserc  .gitignore  README.md  eslint.config.js  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
SOCELLE-WEB-1/: ADMIN_ACCESS_FIX_COMPLETE.md  AGENT_8_DELIVERY_REPORT.txt  APPLY_AUDIT.md  ARCHITECTURE_SUMMARY.md  ART_DIRECTION_SPEC.md  ASSET_MANIFEST.md  AUDIT_README.md  AUTH_DEBUG_UPGRADE_COMPLETE.md  AUTH_DIAGNOSIS_FIXES.md  AUTH_FIX_SUMMARY.md  AUTH_HOSTED_ENVIRONMENT_COMPLETE.md  AUTH_ROLE_GATING_FIXES_COMPLETE.md  BRAND_DISCOVERY_FIX_COMPLETE.md  BRAND_DISCOVERY_ROUTING_FIX.md  BRAND_VISIBILITY_FIX_SUMMARY.md  BRAND_VISIBILITY_RLS_FIX.md  CODEBASE_AUDIT_PHASE1.md  COMPREHENSIVE_TECHNICAL_SUMMARY.md  COPY_AUDIT.md  DATA_INTEGRITY.md  FUNCTIONAL_ARCHITECTURE_AUDIT.md  GEMINI_DEEP_RESEARCH_PROTOCOLS.md  GOVERNANCE_INDEX.md  INGESTION_PLAN_CORRECTED.md  JOBS_AUDIT.md  JOBS_PATCH_LIST.md  JOBS_README.md  LIVE_DATA_AUDIT_CHECKLIST.md  LIVE_DATA_AUDIT_SUMMARY.txt  LOGIN_SETUP_GUIDE.md  MASTER_STATUS.md  P0_COMPLETE_QA_GUIDE.md  PHASE_2_IMPLEMENTATION.md  PLATFORM_AUDIT_COMPLETE.md  PROJECT_SNAPSHOT.md  (+29 more)
SOCELLE-WEB/src-tauri/: Cargo.toml  tauri.conf.json
SOCELLE-WEB/src-tauri/src/: lib.rs  main.rs
(+2339 files in other folders)
