[package]
name = "socelle-desktop"
version = "1.0.0"
description = "SOCELLE Desktop — thin Tauri shell wrapping the React+Vite web app"
authors = ["SOCELLE"]
edition = "2021"
rust-version = "1.77.2"

# No Rust business logic — this is a thin shell only.
# All app logic lives in the React+Vite frontend.
# The Tauri layer provides: native window, file system access for exports, and OS notifications.

[lib]
name = "socelle_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
